Network initialization cleaned up, Gson handling revised; Exception handling revised
Signed-off-by: Markus Michels <markus7017@gmail.com>